// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edits an existing file correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <h2
          class="sub header study--header-sub"
        />
        <button
          class="ui tiny basic icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="sixteen wide column"
    >
      <h2
        class="ui header"
      >
        Upload Study Documents for DRC Approval
      </h2>
      <div
        class="ui basic compact left floated segment noMargin noHorizontalPadding"
      >
        <span
          class="smallLabel"
        >
          Filter by:
        </span>
        <div
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Approval status
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui teal tiny basic label"
              >
                Approved
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui red tiny basic label"
              >
                Changes needed
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui blue tiny basic label"
              >
                Processed
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui basic compact left floated segment noMargin noHorizontalPadding"
      >
        <div
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            File type
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <small
                class="text"
              >
                <i
                  aria-hidden="true"
                  class="shipping icon"
                />
                 Shipping Manifest
              </small>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <small
                class="text"
              >
                <i
                  aria-hidden="true"
                  class="hospital icon"
                />
                 Clinical/Phenotype Data
              </small>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <small
                class="text"
              >
                <i
                  aria-hidden="true"
                  class="dna icon"
                />
                 Sequencing Manifest
              </small>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <small
                class="text"
              >
                <i
                  aria-hidden="true"
                  class="question icon"
                />
                 Other
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui basic compact left floated segment noMargin noHorizontalPadding"
      >
        <span
          class="smallLabel"
        >
          Sorted by:
        </span>
        <div
          aria-expanded="false"
          class="ui selection dropdown"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Date option
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Create date
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Modified date
              </span>
            </div>
          </div>
        </div>
        <button
          class="ui basic icon button"
        >
          <i
            aria-hidden="true"
            class="sort content ascending icon"
          />
        </button>
      </div>
      <div
        class="ui basic compact right floated segment noMargin noHorizontalPadding"
      >
        <div
          class="ui icon input"
        >
          <input
            type="text"
            value=""
          />
          <i
            aria-hidden="true"
            class="search icon"
          />
        </div>
      </div>
      <table
        class="ui selectable stackable very basic very compact table"
      >
        <tbody
          class=""
        >
          <tr
            class="cursor-pointer"
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </td>
            <td
              class=""
            >
              <span
                class="ui medium header"
              >
                organization.jpeg
              </span>
              <p
                class="noMargin"
              >
                Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
              </p>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_5ZPEM167
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Modified 
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    5.5 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
            </td>
            <td
              class="center aligned"
            >
              <div
                class="ui mini vertical buttons"
              >
                <button
                  class="ui basic icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui basic icon button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="cursor-pointer"
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </td>
            <td
              class=""
            >
              <span
                class="ui medium header"
              >
                its.mp3
              </span>
              <p
                class="noMargin"
              >
                Question meeting move recognize.
              </p>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_Y07IN1HO
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Modified 
                    <time
                      datetime="2019-04-06T07:51:17.000Z"
                      title="2019-04-06T07:51:17+00:00"
                    >
                      2 weeks ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    6.8 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="shipping icon"
                  />
                   Shipping Manifest
                </div>
              </div>
            </td>
            <td
              class="center aligned"
            >
              <div
                class="ui mini vertical buttons"
              >
                <button
                  class="ui basic icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui basic icon button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="ui divider"
      />
      <div
        class="row"
      >
        <form>
          <div
            class="ui placeholder piled segment"
          >
            <div
              class="ui icon header"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              To upload Study Documents drag and drop a file here
              <br />
              <small>
                or
              </small>
            </div>
            <br />
            <label
              class="ui icon primary left labeled button"
              for="file"
              role="button"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              Choose a file
            </label>
            <input
              hidden=""
              id="file"
              multiple=""
              type="file"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`edits an existing file correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="xuzhu"
            class="ui avatar image"
            src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
          />
          xuzhu
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <h2
          class="sub header study--header-sub"
        />
        <button
          class="ui tiny basic icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
          <h2
            class="ui header"
          >
            organization.jpeg
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui segments noBorders"
          >
            <div
              class="ui horizontal segments noBorders"
            >
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Approval Status
                </h4>
                <div
                  class="ui orange tiny basic label"
                >
                  Pending review
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Document Type
                </h4>
                <div
                  class="ui small basic label"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Last Updated
                </h4>
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Size
                </h4>
                <div
                  class="ui small basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
            <div
              class="ui segment noBorders"
            >
              <h4
                class="ui grey header"
              >
                Description
              </h4>
              <p>
                Month necessary animal end standard case. View system operation message decade. Actually sing because deal everything woman subject.
              </p>
            </div>
          </div>
        </div>
        <div
          class="three wide computer eight wide mobile four wide tablet column"
        >
          <h5
            class="ui blue top attached center aligned header"
          >
            Actions
          </h5>
          <div
            class="ui raised secondary attached segment"
          >
            <button
              class="ui mini fluid icon primary left labeled button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <div
              class="ui divider"
            />
            <div
              class="ui mini fluid buttons"
            >
              <button
                class="ui grey small icon left labeled button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <table
            class="ui selectable very compact table"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="single line center aligned bottom aligned"
                  colspan="3"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini compact icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class="version--item"
              >
                <td
                  class="collapsing"
                >
                  <div
                    class="ui orange tiny basic ribbon label"
                    title="Latest Version"
                  >
                    Pending review
                  </div>
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edits an existing file correctly 3`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="xuzhu"
            class="ui avatar image"
            src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
          />
          xuzhu
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <h2
          class="sub header study--header-sub"
        />
        <button
          class="ui tiny basic icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
          <h2
            class="ui header"
          >
            mynewfile.txt
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui segments noBorders"
          >
            <div
              class="ui horizontal segments noBorders"
            >
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Approval Status
                </h4>
                <div
                  class="ui teal tiny basic label"
                >
                  Approved
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Document Type
                </h4>
                <div
                  class="ui small basic label"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Last Updated
                </h4>
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Size
                </h4>
                <div
                  class="ui small basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
            <div
              class="ui segment noBorders"
            >
              <h4
                class="ui grey header"
              >
                Description
              </h4>
              <p>
                Some description here
              </p>
            </div>
          </div>
        </div>
        <div
          class="three wide computer eight wide mobile four wide tablet column"
        >
          <h5
            class="ui blue top attached center aligned header"
          >
            Actions
          </h5>
          <div
            class="ui raised secondary attached segment"
          >
            <button
              class="ui mini fluid icon primary left labeled button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <div
              class="ui divider"
            />
            <div
              class="ui mini fluid buttons"
            >
              <button
                class="ui grey small icon left labeled button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <table
            class="ui selectable very compact table"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="single line center aligned bottom aligned"
                  colspan="3"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini compact icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class="version--item"
              >
                <td
                  class="collapsing"
                >
                  <div
                    class="ui teal tiny basic ribbon label"
                    title="Latest Version"
                  >
                    Approved
                  </div>
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
